--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "type": "library",
-    "minimum-stability": "stable",
+    "version": "1.0.0",
     "require": {
 		"php": ">=7.0"
     }, 
